# lns-gorilla-timeseries

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  LICENSE-RESULTS.md  NOTICE  POST_DRAFT.md  README.md  RESULTS.md
bench/: bench_codecs.cpp  bench_probe.cpp  ratio_sweep.cpp  stat_sig.cpp
data/: PREFLIGHT.md  PROVENANCE.md  README.md
data/yfinance/: README.md
data/yfinance_1m/: README.md
include/lns/: adaptive_codec.hpp  alp_codec.hpp  chimp128_codec.hpp  composite.hpp  elf_codec.hpp  gorilla_codec.hpp  ieee_baseline.hpp  lns_codec.hpp  pcodec_codec.hpp  xor_locality_probe.hpp
paper/: icde2027.tex  reproduce.sh
paper/notes/: preregistration.md  preregistration_amendment_1.md  preregistration_threshold.md  related_work_check.md
results/: bench_latest.json  m5_probe_eval.json  pcodec_killtest.json  pcodec_killtest_c.csv
src/: composite.cpp  gorilla_codec.cpp  lns_codec.cpp
tests/: test_adaptive.cpp  test_chimp_elf.cpp  test_composite.cpp  test_gorilla.cpp  test_lns_roundtrip.cpp  test_pcodec.cpp  test_probe.cpp
tools/: analyze_real.py  convert_sdrbench.py  csv_to_bin.cpp  extract_sdrbench.py  fetch_intraday.py  fetch_yahoo.py  gen_synthetic.cpp  m5_probe_eval.py  pcodec_floatmult_killtest.py  preflight.py  probe_eval.cpp
